--- a/mail/sylpheed-gtk2/Makefile
+++ b/mail/sylpheed-gtk2/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.9 2004/02/14 19:20:41 minskim Exp $
+# $NetBSD: Makefile,v 1.10 2004/03/03 23:16:26 minskim Exp $
 #
 
-DISTNAME=	sylpheed-0.9.8a-gtk2-20040109
-PKGNAME=	sylpheed-gtk2-0.9.8a
+DISTNAME=	sylpheed-0.9.9-gtk2-20040229
+PKGNAME=	sylpheed-gtk2-0.9.9
 CATEGORIES=	mail x11
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=sylpheed-gtk2/}
 
