--- a/www/py-curl/Makefile
+++ b/www/py-curl/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.13 2004/02/15 18:44:01 recht Exp $
+# $NetBSD: Makefile,v 1.14 2004/03/04 10:58:09 recht Exp $
 
 DISTNAME=	pycurl-7.11.0
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/py//}
@@ -11,7 +11,7 @@ COMMENT=	Python module interface to the cURL library
 
 PYDISTUTILSPKG=	# defined
 PYBINMODULE=	# defined
-PYTHON_VERSIONS_ACCEPTED=	21pth 22pth 23pth
+PYTHON_VERSIONS_ACCEPTED=	23pth 22pth
 USE_BUILDLINK2=	yes
 PLIST_SUBST+=	PYVERSSUFFIX=${PYVERSSUFFIX}
 
