--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.470 2004/02/29 22:22:24 jmmv Exp $
+# $NetBSD: Makefile,v 1.471 2004/03/04 11:29:09 recht Exp $
 #
 
 COMMENT=	Development utilities
@@ -181,6 +181,7 @@ SUBDIR+=	libbonoboui
 SUBDIR+=	libctl
 SUBDIR+=	libdockapp
 SUBDIR+=	libebml
+SUBDIR+=	libelf
 SUBDIR+=	libetm
 SUBDIR+=	libevent
 SUBDIR+=	libffi
