--- a/devel/gindent/Makefile
+++ b/devel/gindent/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.33 2003/08/09 10:44:41 seb Exp $
+# $NetBSD: Makefile,v 1.34 2004/03/04 13:13:43 sekiya Exp $
 #
 
 DISTNAME=	indent-2.2.8a
@@ -15,6 +15,10 @@ COMMENT=	GNU version of pretty-printer for C source code
 USE_BUILDLINK2=		# defined
 GNU_CONFIGURE=		# defined
 USE_PKGLOCALEDIR=	# defined
+
+CONFIG_GUESS_OVERRIDE+=	${WRKSRC}/config/config.guess
+CONFIG_SUB_OVERRIDE+=	${WRKSRC}/config/config.sub
+
 
 INFO_FILES=	indent.info
 
