--- a/lang/py-psyco/Makefile
+++ b/lang/py-psyco/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.2 2004/01/20 12:19:17 agc Exp $
+# $NetBSD: Makefile,v 1.3 2004/03/04 14:33:55 recht Exp $
 
-DISTNAME=       psyco-1.1.1-src
+DISTNAME=       psyco-1.2-src
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/-src//}
 CATEGORIES=     lang
 MASTER_SITES=   ${MASTER_SITE_SOURCEFORGE:=psyco/}
@@ -10,7 +10,7 @@ HOMEPAGE=       http://psyco.sf.net/
 COMMENT=        Python JIT and execution accelerator
 
 WRKSRC=		${WRKDIR}/${DISTNAME:S/-src//}
-USE_BUILDLINK2=	YES
+USE_BUILDLINK3=	YES
 PYDISTUTILSPKG=	YES
 PYBINMODULE=	YES
 PY_PATCHPLIST=	YES
