--- a/net/Makefile
+++ b/net/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.450 2004/03/03 10:05:40 recht Exp $
+# $NetBSD: Makefile,v 1.451 2004/03/04 15:49:47 wiz Exp $
 #
 
 COMMENT=	Networking tools
@@ -321,6 +321,7 @@ SUBDIR+=	tkined
 SUBDIR+=	tn5250
 SUBDIR+=	tnftp
 SUBDIR+=	tnftpd
+SUBDIR+=	torrentutils
 SUBDIR+=	totd
 SUBDIR+=	traceroute-as
 SUBDIR+=	trafshow
