--- a/devel/py-logging/Makefile
+++ b/devel/py-logging/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.3 2003/07/17 21:33:29 grant Exp $
+# $NetBSD: Makefile,v 1.4 2004/03/04 16:26:53 minskim Exp $
 #
 
-DISTNAME=	logging-0.4.7
-PKGNAME=	${PYPKGPREFIX}-logging-0.4.7
+DISTNAME=	logging-0.4.9.2
+PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	devel
 MASTER_SITES=	http://www.red-dove.com/
 
@@ -10,7 +10,7 @@ MAINTAINER=	tech-pkg@NetBSD.org
 HOMEPAGE=	http://www.red-dove.com/python_logging.html
 COMMENT=	Python logging system
 
-USE_BUILDLINK2=	YES
+USE_BUILDLINK3=	YES
 PYDISTUTILSPKG=	yes
 
 .include "../../lang/python/extension.mk"
