--- a/ham/xlog/Makefile
+++ b/ham/xlog/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.5 2004/02/18 06:04:44 wulf Exp $
+# $NetBSD: Makefile,v 1.6 2004/03/04 22:28:38 wulf Exp $
 #
 
 DISTNAME=	xlog-0.9.1
@@ -6,7 +6,7 @@ CATEGORIES=	ham
 MASTER_SITES=	http://www.qsl.net/pg4i/download/
 
 MAINTAINER=	wulf@NetBSD.org
-HOMEPAGE=	http://http://www.qsl.net/pg4i/linux/xlog.html
+HOMEPAGE=	http://www.qsl.net/pg4i/linux/xlog.html
 COMMENT=	Amateur Radio logging program
 
 USE_BUILDLINK2=	yes
