--- a/mail/thunderbird-bin-nightly/Makefile.Linux.i386
+++ b/mail/thunderbird-bin-nightly/Makefile.Linux.i386
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile.Linux.i386,v 1.5 2004/03/05 00:44:42 grant Exp $
+# $NetBSD: Makefile.Linux.i386,v 1.6 2004/03/05 00:45:32 grant Exp $
 
 DISTNAME=	thunderbird-i686-pc-linux-gnu
 EXTRACT_SUFX=	.tar.bz2
-MASTER_SITES=	http://ftp.mozilla.org/pub/thunderbird/nightly/2004-02-20-trunk/
+MASTER_SITES=	http://ftp.mozilla.org/pub/mozilla.org/thunderbird/nightly/2004-02-20-trunk/
 
 MOZ_PLATFORM=	linux
