--- a/mail/thunderbird-bin-nightly/Makefile.SunOS.sparc
+++ b/mail/thunderbird-bin-nightly/Makefile.SunOS.sparc
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile.SunOS.sparc,v 1.2 2004/01/04 05:01:02 grant Exp $
+# $NetBSD: Makefile.SunOS.sparc,v 1.3 2004/03/05 00:45:32 grant Exp $
 
 DISTNAME=	thunderbird-sparc-sun-solaris2.7
-MASTER_SITES=	http://ftp.mozilla.org/pub/thunderbird/nightly/contrib/latest-trunk/
+MASTER_SITES=	http://ftp.mozilla.org/pub/mozilla.org/thunderbird/nightly/contrib/latest-trunk/
 
 MOZ_PLATFORM=	solaris
