--- a/time/gdeskcal/Makefile
+++ b/time/gdeskcal/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.11 2004/01/23 21:50:49 jmmv Exp $
+# $NetBSD: Makefile,v 1.12 2004/03/05 03:30:35 minskim Exp $
 #
 
-DISTNAME=		gDeskCal-0_55
-PKGNAME=		gdeskcal-0.55
-PKGREVISION=		4
+DISTNAME=		gDeskCal-0_57
+PKGNAME=		gdeskcal-0.57
 CATEGORIES=		time
 MASTER_SITES=		http://www.pycage.de/download/
 
@@ -11,12 +10,15 @@ MAINTAINER=		tech-pkg@NetBSD.org
 HOMEPAGE=		http://www.pycage.de/software_gdeskcal.html
 COMMENT=		Desktop calendar
 
-WRKSRC=		${WRKDIR}/gDeskCal-0.55
-USE_BUILDLINK2=	yes
+WRKSRC=		${WRKDIR}/gDeskCal-0.57
+USE_BUILDLINK3=	yes
 NO_BUILD=	yes
 
 PYTHON_VERSIONS_ACCEPTED=	22pth 23pth
 PYTHON_PATCH_SCRIPTS=	gdeskcal
+
+post-extract:
+	${RM} ${WRKSRC}/data/format.xml~
 
 do-install:
 	${INSTALL_DATA_DIR} ${PREFIX}/lib/gdeskcal
@@ -25,7 +27,7 @@ do-install:
 		${PREFIX}/lib/gdeskcal/code
 	${LN} -s ${PREFIX}/lib/gdeskcal/gdeskcal ${PREFIX}/bin
 
-.include "../../x11/py-gtk2/buildlink2.mk"
-.include "../../textproc/py-xml/buildlink2.mk"
+.include "../../x11/py-gtk2/buildlink3.mk"
+.include "../../textproc/py-xml/buildlink3.mk"
 .include "../../lang/python/application.mk"
 .include "../../mk/bsd.pkg.mk"
