--- a/print/teTeX-bin/Makefile.common
+++ b/print/teTeX-bin/Makefile.common
@@ -1,11 +1,11 @@
-# $NetBSD: Makefile.common,v 1.2 2004/01/24 14:58:00 grant Exp $
+# $NetBSD: Makefile.common,v 1.3 2004/03/05 08:30:12 tron Exp $
 
 TETEX_BIN_VERS=		2.0.2
 DIST_SUBDIR=		teTeX
 ALL_TARGET=		all
 INSTALL_TARGET=		install strip
 
-USE_BUILDLINK2=		yes
+USE_BUILDLINK3=		yes
 USE_GNU_TOOLS+=		make
 USE_PKGINSTALL=		yes
 USE_X11=		yes
@@ -55,8 +55,8 @@ OWN_DIRS_PERMS=		${TEXFONTSDIR}/pk ${ROOT_USER} ${ROOT_GROUP} 1777
 OWN_DIRS_PERMS+=	${TEXFONTSDIR}/source ${ROOT_USER} ${ROOT_GROUP} 1777
 OWN_DIRS_PERMS+=	${TEXFONTSDIR}/tfm ${ROOT_USER} ${ROOT_GROUP} 1777
 
-.include "../../www/libwww/buildlink2.mk"
-.include "../../graphics/png/buildlink2.mk"
-.include "../../fonts/t1lib/buildlink2.mk"
-.include "../../devel/zlib/buildlink2.mk"
-.include "../../devel/ncurses/buildlink2.mk"
+.include "../../www/libwww/buildlink3.mk"
+.include "../../graphics/png/buildlink3.mk"
+.include "../../fonts/t1lib/buildlink3.mk"
+.include "../../devel/zlib/buildlink3.mk"
+.include "../../devel/ncurses/buildlink3.mk"
