--- a/games/freeciv-client/Makefile
+++ b/games/freeciv-client/Makefile
@@ -1,21 +1,20 @@
-# $NetBSD: Makefile,v 1.17 2003/07/13 17:42:38 wiz Exp $
+# $NetBSD: Makefile,v 1.18 2004/03/05 12:07:51 adam Exp $
 
-PKGNAME=		${DISTNAME:S/-/-client-/}
-COMMENT=		Freeciv client with Xaw interface
+PKGNAME=	${DISTNAME:S/-/-client-/}
+COMMENT=	Freeciv client with Xaw interface
 
-DEPENDS+=		freeciv-share>=${FC_VERS}:../../games/freeciv-share
-DEPENDS+=		freeciv-sounds>=2.0:../../games/freeciv-sounds
+DEPENDS+=	freeciv-share>=${FC_VERS}:../../games/freeciv-share
+DEPENDS+=	freeciv-sounds>=2.0:../../games/freeciv-sounds
 
-CONFLICTS=		freeciv-client-gtk<=1.11.4
+CONFLICTS=	freeciv-client-gtk<=1.11.4
+
+USE_BUILDLINK2=		yes
+USE_X11=		yes
+
+CONFIGURE_ARGS+=	--disable-server --disable-make-data
+CONFIGURE_ARGS+=	--enable-client=xaw
 
 .include "../../mk/bsd.prefs.mk"
-
-USE_BUILDLINK2=		# defined
-USE_X11=		# defined
-
-CONFIGURE_ARGS+=	--disable-server
-CONFIGURE_ARGS+=	--disable-make-data
-CONFIGURE_ARGS+=	--enable-client=xaw
 
 .if defined(XAW_TYPE) && (${XAW_TYPE} == "3d" || ${XAW_TYPE} == "xpm")
 CONFIGURE_ARGS+=	--with-xaw3d
