--- a/games/freeciv-share/Makefile
+++ b/games/freeciv-share/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.8 2003/07/13 13:51:44 wiz Exp $
+# $NetBSD: Makefile,v 1.9 2004/03/05 12:06:38 adam Exp $
 
-PKGNAME=		${DISTNAME:S/-/-share-/}
-PKGREVISION=		1
-COMMENT=		Machine independent files for Freeciv
+PKGNAME=	${DISTNAME:S/-/-share-/}
+COMMENT=	Machine independent files for Freeciv
 
 .include "../freeciv-share/Makefile.common"
 
