--- a/games/freeciv-share/Makefile.common
+++ b/games/freeciv-share/Makefile.common
@@ -1,22 +1,22 @@
-# $NetBSD: Makefile.common,v 1.15 2003/07/17 21:38:23 grant Exp $
+# $NetBSD: Makefile.common,v 1.16 2004/03/05 12:06:38 adam Exp $
 
-DISTNAME=		freeciv-${FC_VERS}
-FC_VERS=		1.14.0
-CATEGORIES=		games
-MASTER_SITES=		ftp://ftp.freeciv.org/pub/freeciv/stable/ \
-			http://www.freeciv.org/ftp/stable/ \
-			ftp://ftp.freeciv.org/pub/freeciv/beta/ \
-			http://www.freeciv.org/ftp/beta/
-EXTRACT_SUFX=		.tar.bz2
+DISTNAME=	freeciv-${FC_VERS}
+FC_VERS=	1.14.1
+CATEGORIES=	games
+MASTER_SITES=	ftp://ftp.freeciv.org/pub/freeciv/stable/ \
+		http://www.freeciv.org/ftp/stable/ \
+		ftp://ftp.freeciv.org/pub/freeciv/beta/ \
+		http://www.freeciv.org/ftp/beta/
+EXTRACT_SUFX=	.tar.bz2
 
-MAINTAINER=		tech-pkg@NetBSD.org
-HOMEPAGE=		http://www.freeciv.org/
+MAINTAINER=	tech-pkg@NetBSD.org
+HOMEPAGE=	http://www.freeciv.org/
 
-BUILD_USES_MSGFMT=	# defined
+BUILD_USES_MSGFMT=	yes
 
-USE_BUILDLINK2=		# defined
-USE_PKGLOCALEDIR=	# defined
-GNU_CONFIGURE=		# defined
+USE_BUILDLINK2=		yes
+USE_PKGLOCALEDIR=	yes
+GNU_CONFIGURE=		yes
 
 DISTINFO_FILE=		${.CURDIR}/../../games/freeciv-share/distinfo
 PATCHDIR=		${.CURDIR}/../../games/freeciv-share/patches
