--- a/cad/geda-examples/Makefile
+++ b/cad/geda-examples/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.4 2004/02/23 04:02:55 dmcmahill Exp $
+# $NetBSD: Makefile,v 1.5 2004/03/05 13:03:47 dmcmahill Exp $
 #
 
 DISTNAME=	geda-examples-${PKGVERSION}
@@ -18,6 +18,9 @@ CONFLICTS+=	gEDA<19991011
 
 GNU_CONFIGURE=	YES
 USE_GNU_TOOLS+=	make
+
+pre-install:
+	${RM} -f ${WRKSRC}/config.status.overridden
 
 do-install:
 	${INSTALL_DATA_DIR} ${PREFIX}/share/examples/geda
