--- a/www/firefox-gtk2-bin/Makefile
+++ b/www/firefox-gtk2-bin/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1.1.1 2004/02/09 10:36:54 grant Exp $
+# $NetBSD: Makefile,v 1.2 2004/03/05 14:06:27 grant Exp $
 
 MOZILLA=	firefox
 MOZ_VER=	0.8
@@ -8,6 +8,6 @@ COMMENT=	Lightweight gecko-based web browser (gtk2 binary pkg)
 
 MOZ_GTK2=	YES
 
-ONLY_FOR_PLATFORM+=	Linux-*-i[3-6]86
+ONLY_FOR_PLATFORM+=	Linux-*-i386
 
 .include "../../www/mozilla-bin/Makefile.common"
