--- a/math/Makefile
+++ b/math/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.108 2003/12/24 10:58:47 recht Exp $
+# $NetBSD: Makefile,v 1.109 2004/03/05 14:47:38 adam Exp $
 #
 
 COMMENT=	Mathematics
@@ -14,6 +14,7 @@ SUBDIR+=	blitz++
 SUBDIR+=	calc
 SUBDIR+=	capc-calc
 SUBDIR+=	cassowary
+SUBDIR+=	cln
 SUBDIR+=	dcdflib.c
 SUBDIR+=	dcdflib.f
 SUBDIR+=	dfftpack
