--- a/www/firefox-gtk2-bin/Makefile
+++ b/www/firefox-gtk2-bin/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.2 2004/03/05 14:06:27 grant Exp $
+# $NetBSD: Makefile,v 1.3 2004/03/05 14:48:08 grant Exp $
 
 MOZILLA=	firefox
 MOZ_VER=	0.8
@@ -9,5 +9,6 @@ COMMENT=	Lightweight gecko-based web browser (gtk2 binary pkg)
 MOZ_GTK2=	YES
 
 ONLY_FOR_PLATFORM+=	Linux-*-i386
+ONLY_FOR_PLATFORM+=	SunOS-5.[89]*-sparc
 
 .include "../../www/mozilla-bin/Makefile.common"
