--- a/sysutils/gkrellm/Makefile
+++ b/sysutils/gkrellm/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.29 2004/02/25 08:41:56 cube Exp $
+# $NetBSD: Makefile,v 1.30 2004/03/05 17:08:51 minskim Exp $
 .include "Makefile.common"
 
 GKRELLM_PKGBASE=	gkrellm
@@ -34,6 +34,7 @@ post-install:
 
 .include "../../x11/gtk2/buildlink3.mk"
 .include "../../devel/glib2/buildlink3.mk"
+.include "../../devel/pkgconfig/buildlink3.mk"
 .include "../../security/openssl/buildlink3.mk"
 
 .include "../../mk/bsd.pkg.mk"
