--- a/inputmethod/canna/Makefile
+++ b/inputmethod/canna/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.2 2003/09/23 15:06:57 uebayasi Exp $
+# $NetBSD: Makefile,v 1.3 2004/03/05 19:04:30 minskim Exp $
 #
 .include "Makefile.common"
 
@@ -9,7 +9,11 @@ DEPENDS+=	Canna-dict>=${CANNA_VERSION}:../canna-dict
 
 EXTRACT_ONLY=	# empty
 NO_CHECKSUM=	YES
+NO_BUILDLINK=	YES
+NO_CONFIGURE=	YES
 NO_BUILD=	YES
+
+CANNA_MODULE=	meta-package
 
 do-patch:	# empty
 do-install:	# empty
