--- a/sysutils/gkrellm/Makefile
+++ b/sysutils/gkrellm/Makefile
@@ -1,5 +1,7 @@
-# $NetBSD: Makefile,v 1.30 2004/03/05 17:08:51 minskim Exp $
+# $NetBSD: Makefile,v 1.31 2004/03/05 21:01:54 cube Exp $
 .include "Makefile.common"
+
+PKGREVISION=		1
 
 GKRELLM_PKGBASE=	gkrellm
 WRKSRC=			${GKRELLM_SRCDIR}
