--- a/inputmethod/sj3-server/Makefile
+++ b/inputmethod/sj3-server/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.3 2003/07/17 21:43:45 grant Exp $
+# $NetBSD: Makefile,v 1.4 2004/03/05 21:03:27 minskim Exp $
 
 DISTNAME=	sj3-server-2.0.1.20
 PKGREVISION=	1
@@ -13,6 +13,8 @@ DEPENDS+=	sj3-server-bin>=2.0.1.20nb1:../sj3-server-bin
 DEPENDS+=	sj3-dict>=2.0.1.20nb1:../sj3-dict
 
 EXTRACT_ONLY=	# empty
+NO_BUILDLINK=	YES
+NO_CONFIGURE=	YES
 NO_BUILD=	YES
 NO_CHECKSUM=	YES
 
