--- a/inputmethod/sj3-server-bin/Makefile
+++ b/inputmethod/sj3-server-bin/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.7 2004/03/02 17:49:51 minskim Exp $
+# $NetBSD: Makefile,v 1.8 2004/03/05 21:23:00 minskim Exp $
 #
 
 DISTNAME=	sj3-2.0.1.20
@@ -14,7 +14,9 @@ COMMENT=	Japanese input method (server binary)
 DISTINFO_FILE=	${.CURDIR}/../sj3-lib/distinfo
 PATCHDIR=	${.CURDIR}/../sj3-lib/patches
 
-USE_BUILDLINK2=	YES
+PKG_INSTALLATION_TYPES=	overwrite pkgviews
+
+USE_BUILDLINK3=	YES
 USE_PKGINSTALL=	YES
 
 .include "../../mk/bsd.prefs.mk"
@@ -44,6 +46,6 @@ pre-configure:
 do-configure:
 	@(cd ${WRKSRC}; ${XMKMF_CMD}; ${MAKE} Makefiles)
 
-.include "../../devel/nbitools/nbitools.mk"
-.include "../../inputmethod/sj3-lib/buildlink2.mk"
+.include "../../devel/nbitools/buildlink3.mk"
+.include "../../inputmethod/sj3-lib/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
