--- a/audio/Makefile
+++ b/audio/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.216 2004/02/27 02:59:38 snj Exp $
+# $NetBSD: Makefile,v 1.217 2004/03/05 22:34:27 ben Exp $
 #
 
 COMMENT=	Audio tools
@@ -94,6 +94,7 @@ SUBDIR+=	libcddb
 SUBDIR+=	libid3tag
 SUBDIR+=	libmad
 SUBDIR+=	libmikmod
+SUBDIR+=	libmodplug
 SUBDIR+=	libogg
 SUBDIR+=	libsamplerate
 SUBDIR+=	libshout
