--- a/audio/Makefile
+++ b/audio/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.217 2004/03/05 22:34:27 ben Exp $
+# $NetBSD: Makefile,v 1.218 2004/03/05 22:37:30 ben Exp $
 #
 
 COMMENT=	Audio tools
@@ -223,6 +223,7 @@ SUBDIR+=	xmms-madspin
 SUBDIR+=	xmms-meta-csound
 SUBDIR+=	xmms-meta-input
 SUBDIR+=	xmms-meta-timidity
+SUBDIR+=	xmms-modplug
 SUBDIR+=	xmms-musepack
 SUBDIR+=	xmms-neato
 SUBDIR+=	xmms-nebulus
