--- a/mail/postfix/Makefile
+++ b/mail/postfix/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.118 2004/03/05 13:54:32 grant Exp $
+# $NetBSD: Makefile,v 1.119 2004/03/06 06:28:22 grant Exp $
 
 DISTNAME=	postfix-2.0.18
 PKGREVISION=	1
@@ -116,6 +116,9 @@ MESSAGE_SUBST+=	PKG_SYSCONFDIR=${PKG_SYSCONFDIR}
 .endif
 
 MESSAGE_SRC+=	${PKGDIR}/MESSAGE
+.if exists(${PKGDIR}/MESSAGE.${OPSYS})
+MESSAGE_SRC+=	${PKGDIR}/MESSAGE.${OPSYS}
+.endif
 PLIST_SRC+=	${PKGDIR}/PLIST
 ALL_TARGET=	#empty
 MAKE_ENV=	CC="${CC}" OPT="${CFLAGS}"
